# shipsbattle

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: plugins.cfg  plugins_d.cfg  resources.cfg
src/: .gitignore  CMakeLists.txt  main.cc
src/shipsbattle/: main.cc
src/shipsbattle/components/: hull.cc  hull.h  motion.cc  motion.h  navigation.cc  navigation.h  playercontroller.cc  playercontroller.h  powersystem.cc  powersystem.h  projectilecontroller.cc  projectilecontroller.h  spacedust.cc  spacedust.h  tactical.cc  tactical.h  timedlife.cc  timedlife.h  updateablecomponent.cc  updateablecomponent.h
src/shipsbattle/components/subsystems/: battery.h  damageablesystem.cc  damageablesystem.h  impulseengine.cc  impulseengine.h  poweredsystem.cc  poweredsystem.h  powergenerator.h  projectileweapon.cc  projectileweapon.h  sensorarray.cc  sensorarray.h  shipsubsystem.cc  shipsubsystem.h  subhull.h  thruster.cc  thruster.h  typedefs.h  weapon.cc  weapon.h
src/shipsbattle/objects/: objecttypes.h  projectile.cc  projectile.h  projectilemodel.cc  projectilemodel.h  ship.cc  ship.h  targets.cc  targets.h
src/shipsbattle/utils/: matrix.h
